@@ -366,6 +366,8 @@ Library
 
 - Issue #1831: ctypes now raises a TypeError if conflicting positional
   and named arguments are passed to a Structure or Union initializer.
+  When too many positional arguments are passed, also a TypeError is
+  raised instead of a ValueError.
 
 - Convert the internal ctypes array type cache to a WeakValueDict so
   that array types do not live longer than needed.
